[tool.poetry]
name = "repl_python3_Babii"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
twilio = "^7.2.0"
Pillow = "^8.4.0"
Flask-SocketIO = "^5.1.1"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
